// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#CookiesConsent render - cookies accepted 1`] = `
<Fragment>
  <CookiesBanner
    onAccept={[Function]}
    onShowInfo={[Function]}
  />
</Fragment>
`;

exports[`#CookiesConsent render - cookies not accepted 1`] = `
<Fragment>
  <CookiesBanner
    onAccept={[Function]}
    onShowInfo={[Function]}
  />
</Fragment>
`;

exports[`#CookiesConsent showInfo / hideInfo 1`] = `
<Fragment>
  <CookiesBanner
    onAccept={[Function]}
    onShowInfo={[Function]}
  />
  <CookiesModal
    onClose={[Function]}
  />
</Fragment>
`;

exports[`#CookiesConsent showInfo / hideInfo 2`] = `
<Fragment>
  <CookiesBanner
    onAccept={[Function]}
    onShowInfo={[Function]}
  />
</Fragment>
`;
